--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/172047970c.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -59,8 +60,8 @@
     </nav>
 </header>
 <main>
-    <div class="banner"><a href="./index.html" target="_blank"><img src="./images/matizbanner.png" alt="Matiz banner"></a></div>
- <section id="shop">
+    <div class="banner" data-aos="flip-left"><a href="./index.html" target="_blank"><img src="./images/matizbanner.png" alt="Matiz banner"></a></div>
+ <section id="shop" data-aos="fade-up">
         <h2>Tienda</h2>
      <div class="tienda">
          <div class="tienda-productos">
@@ -83,9 +84,9 @@
          </div>
      </div>
  </section>
- <section id="styling">
+ <section id="styling" data-aos="fade-up">
      <h2>Styling</h2>
-    <div class="style-clips">
+    <div class="style-clips" data-aos="fade-up">
        <div class="clips"> 
           <div><h3>Videoclips</h3></div> 
           <div><iframe src="https://www.youtube.com/embed/iVVLDFswMKk?si=-M7KtCLmsErt2_pu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
@@ -96,7 +97,7 @@
      </div>
     </div>
     <h3>Looks</h3> 
-    <div class="looks">
+    <div class="looks" data-aos="fade-up">
         <div class="looks-fotos">
             <a href="#contact"><img src="./images/look1.JPEG"></a>
             <a href="#contact"> <img src="./images/look2.JPEG"></a>
@@ -107,7 +108,7 @@
         </div>
     </div>
  </section> 
- <section id="events">
+ <section id="events" data-aos="fade-up">
     <h2>Eventos</h2>
     <div class="container text-center">
         <div class="row">
@@ -121,7 +122,7 @@
                 <h3>Local Global</h3>
             </div>
           </div>
-        <div class="row">
+        <div class="row" data-aos="fade-up">
           <div class="col">
             <div class="col-img"><img class="linkeventos" src="./images/flyer1.JPEG"></div>
           </div>
@@ -134,7 +135,7 @@
         </div>
       </div>
 </section> 
-<section id="us">
+<section id="us" data-aos="fade-up">
    <h2>Nosotros</h2>
    <div class="nosotros">
     <img src="./images/nosotrosbanner.png" alt="Nosotros">
@@ -143,9 +144,9 @@
     </div>
    </div> 
 </section> 
-<section id="contact">
+<section id="contact" data-aos="fade-up">
  <h2>Contacto</h2>
-   <div class="container text-center">
+   <div class="container text-center" data-aos="fade-up">
      <div class="row">
         <div class="col">
             <ul class="contacto-datos">
@@ -203,6 +204,10 @@
         </div>
       </div>
 </footer>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+ <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ <script>
+  AOS.init();
+</script>   
 </body>
 </html>
