se modifico el html y los estilos de las paginas de tienda a un nuevo formato como prueba y se comento para tenerlo de opcion

--- a/pages/tiendaCamisas.html
+++ b/pages/tiendaCamisas.html
@@ -59,6 +59,65 @@
         </nav>
     </header>
     <main>
+      <!--<section class="store">
+        <h2>Tienda</h2> 
+      <section class="catalogo">
+         <div>
+            <div class="producto">
+            <img src="../tienda/camisa2.png">
+            <div> <p>comprar</p> </div>
+            </div>  
+         </div>
+         <div>
+            <div class="producto">
+            <img src="../tienda/camisa3.jpg">
+            <div> <p>comprar</p> </div>
+            </div>  
+         </div>
+         <div>
+            <div class="producto">
+            <img src="../tienda/camisa4.png">
+            <div> <p>comprar</p> </div>
+            </div>  
+         </div>
+         <div>
+           <div class="producto">
+           <img src="../tienda/camisa5.png">
+           <div> <p>comprar</p> </div>
+           </div>  
+         </div>
+         <div>
+           <div class="producto">
+           <img src="../tienda/camisa6.png">
+           <div> <p>comprar</p> </div>
+           </div>  
+         </div>
+         <div>
+           <div class="producto">
+           <img src="../tienda/camisa7.jpg">
+           <div> <p>comprar</p> </div>
+           </div>  
+         </div>
+         <div>
+           <div class="producto">
+           <img src="../tienda/camisa8.JPG">
+           <div> <p>comprar</p> </div>
+           </div>  
+         </div>
+         <div>
+           <div class="producto">
+           <img src="../tienda/camisa9.jpg">
+           <div> <p>comprar</p> </div>
+           </div>  
+          </div>
+          <div>
+           <div class="producto">
+           <img src="../tienda/camisa10.jpg">
+           <div> <p>comprar</p> </div>
+           </div>  
+          </div>
+      </section>
+      </section>-->
         <section class="camisas">
                 <h2>Tienda</h2> 
                 <div class="tienda-camisas">
