se modifico la animacion de nos en el index y se le agrego animacion a las demas paginas, tambien se modifico el meta title, keywords y description de cada pagina y se modificaron los nav bar de las paginas de tienda y evento corrigiendo la ruta de los links y los dropdown items faltantes en cada una

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="modelos usando distintos estilos de ropa para distintas ocasiones y los distintos servicios de estilismo que ofrece la tienda">
-    <meta name="keywords" content="style, looks, ropa, vestuario, estlismo, tienda, retail">
-    <title>Matiz</title>
+    <meta name="description" content="Home del sitio web Matiz, modelos con la ropa de la tienda, catalogo de tienda, servicio de styling con videos e imagenes de trabajos previos, flyers de eventos, texto sobre nosotros e informacion de contacto">
+    <meta name="keywords" content="styles, looks, ropa, streetwear, vestuario, estlismo, tienda, retail, cultura, variedades, contenido, moda, lifestyle, farandula, design">
+    <title>Matiz / Home</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./images/logotipomatiz.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,7 +52,7 @@
                 <a class="nav-link" href="#contact">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                <a class="nav-link" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
               </li>
             </ul>
           </div>
@@ -137,7 +137,7 @@
 </section> 
 <section id="us" data-aos="fade-up">
    <h2>Nosotros</h2>
-   <div class="nosotros">
+   <div class="nosotros" data-aos="fade-up">
     <img src="./images/nosotrosbanner.png" alt="Nosotros">
     <div class="nosotros-texto">
         <p>Somos un colectivo de artistas de varias disciplinas que se inspiran en la busqueda de un mundo propio. Nuestra mision es la exploracion del diseño de modas, la arquitectura, la serigrafia, la fotografia, la pintura, la musica y el cine. Y la utilizacion de estos medios como herramienta para generar un movimiento de representacion del tiempo en el que vivimos y nuestro entorno actual, usando la ropa como principal via de comunicacion material para expandir nuestras visiones y mensajes.</p>
