--- a/pages/eventoEstajevi.html
+++ b/pages/eventoEstajevi.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="modelos usando distintos estilos de ropa para distintas ocasiones y los distintos servicios de estilismo que ofrece la tienda">
-    <meta name="keywords" content="style, looks, ropa, vestuario, estlismo, tienda, retail">
-    <title>Matiz</title>
+    <meta name="description" content="articulo e imagenes sobre el evento esta jevi y la participacion de matiz en el 2023">
+    <title>Matiz / Eventos / Esta Jevi</title>
     <link rel="stylesheet" href="../style/style.css">
     <link rel="shortcut icon" href="../images/logotipomatiz.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,65 +14,66 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../images/logotiponav.PNG" alt="logotipo"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Tienda
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../pages/tiendaCamisas.html">Camisas</a></li>
-                      <li><a class="dropdown-item" href="../pages/tiendaChaquetas.html">Chaquetas</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html#styling">Styling</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Eventos 
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../pages/eventoGlobal.html">Local Global</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html#us">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html#contact">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2xl"></i></a>
-                  </li>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img src="../images/logotiponav.PNG" alt="logotipo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Tienda
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../pages/tiendaCamisas.html">Camisas</a></li>
+                  <li><a class="dropdown-item" href="../pages/tiendaChaquetas.html">Chaquetas</a></li>
                 </ul>
-              </div>
-            </div>
-        </nav>
-    </header>
-    <main>
-      <article class="eventos">
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#styling">Styling</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Eventos 
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../pages/eventoEstajevi.html">Esta Jevi</a></li>
+                  <li><a class="dropdown-item" href="../pages/eventoGlobal.html">Local Global</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html/#us">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html/#contact">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+</header>
+<main>
+      <article class="eventos" data-aos="fade-up">
         <h1>Eventos</h1>
         <section>
-        <div class="articulo">
+        <div class="articulo" data-aos="fade-up">
         <div class="articulo-cajas">
-          <div class="jevi-portada"><img src="../eventos/estajevi.jpg"></div>
+          <div class="jevi-portada" data-aos="flip-left"><img src="../eventos/estajevi.jpg"></div>
           <div><p>Se trata de una noche para ser, para bailar, para encontrarse, para brindar, para disfrutar, para abrazarse con quien comparte la misma emoción de estar en un espacio en el que la libertad y el respeto son la premisa principal. La mayoría usa lentes oscuros, no hay código de vestimenta, si tuviesen que resaltar algo seguramente sería “sé tú mismo y no tengas miedo”. Es por eso que hay tanta piel desnuda, tantos brillos, tanta variedad de colores, nadie critica, nadie juzga.</p></div>
         </div>
         <div class="articulo-cajas">
           <div><p>Está Jevi es un espacio de encuentro multidisciplinario donde cada una de las personas que va puede expresarse desde lo que son. Es un espacio en el que quien vaya puede sentir la libertad de ser lo que quiera, sin pretensiones y sobre todo sin juicios. Y sí, tambien es una noche en la que convergen distintas expresiones musicales, artísticas e identitarias. Pero la música y el alcohol no son suficientes en este encuentro, con esta iniciativa se busca algo mas trascendente. Ese “algo más” fue tomando forma al invitar a artistas emergentes, involucrar a marcas nacionales para exponer y comercializar su trabajo y así dieron con un encuentro en el que no solo había buena música, sino también performance, arte, diseño.</p></div>
-          <div class="jevi-retratos"><img src="../eventos/estajevi2.jpg"> <img src="../eventos/estajevi3.jpg"></div>
+          <div class="jevi-retratos" data-aos="flip-left"><img src="../eventos/estajevi2.jpg"> <img src="../eventos/estajevi3.jpg"></div>
         </div>
         </div>
         <div class="articulo-cajas-footer">
-          <div class="jevi-tienda"><img src="../eventos/estajevi8.jpg.webp"></div>
+          <div class="jevi-tienda" data-aos="flip-left"><img src="../eventos/estajevi8.jpg.webp"></div>
           <div><p>Es bajo este contexto en que se le da voz y espacio a artistas y propuestas emergentes, esto nos motivaba a abarcar desde un lugar bastante ambicioso varios rubros claves para la microeconomía de un país, arte, música y moda. Este colectivo liderado y dirigido por un equipo conformado enteramente por mujeres es el responsable de darle refugio a distintas marcas nacionales, con propuestas alternativas y que apuestan por la busqueda de la identidad tratan de captar la atención de posibles compradores en un mercado donde pocas veces se encuentran reunidas tantas alternativas tan nutridas de originalidad. Dentro de este microcosmos tan inspirador fue que Matiz se asocio para aportar su grano de arena a un conjunto del que nos honra formar parte.</p></div>
         </div>
         </section>
