--- a/pages/tiendaChaquetas.html
+++ b/pages/tiendaChaquetas.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="modelos usando distintos estilos de ropa para distintas ocasiones y los distintos servicios de estilismo que ofrece la tienda">
-    <meta name="keywords" content="style, looks, ropa, vestuario, estlismo, tienda, retail">
-    <title>Matiz</title>
+    <meta name="description" content="catalogo de chaquetas, abrigos y camperas">
+    <meta name="keywords" content="chaquetas, jackets, abrigos, camperas, cortavientos, style, looks, ropa, vestuario, estlismo, tienda, retail">
+    <title>Matiz / Tienda / Chaquetas</title>
     <link rel="stylesheet" href="../style/style.css">
     <link rel="shortcut icon" href="../images/logotipomatiz.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,50 +15,51 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img src="../images/logotiponav.PNG" alt="logotipo"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Tienda
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../pages/tiendaCamisas.html">Camisas</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html#styling">Styling</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Eventos 
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../pages/eventoEstajevi.html">Esta Jevi</a></li>
-                      <li><a class="dropdown-item" href="../pages/eventoGlobal.html">Local Global</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html#us">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html#contact">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com"><i class="fa-brands fa-instagram fa-2xl"></i></a>
-                  </li>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img src="../images/logotiponav.PNG" alt="logotipo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Tienda
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../pages/tiendaCamisas.html">Camisas</a></li>
+                  <li><a class="dropdown-item" href="../pages/tiendaChaquetas.html">Chaquetas</a></li>
                 </ul>
-              </div>
-            </div>
-        </nav>
-    </header>
-    <main>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#styling">Styling</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Eventos 
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../pages/eventoEstajevi.html">Esta Jevi</a></li>
+                  <li><a class="dropdown-item" href="../pages/eventoGlobal.html">Local Global</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html/#us">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html/#contact">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+</header>
+<main>
 <!--<section class="store">
         <h2>Tienda</h2> 
       <section class="catalogo">
@@ -118,11 +119,11 @@
           </div>
       </section>
     </section>-->
-      <section class="camisas">
+      <section class="camisas" data-aos="fade-up">
               <h1>Tienda</h1> 
-              <div class="tienda-camisas">
+              <div class="tienda-camisas" data-aos="fade-up">
                   <div class="productos-camisas">
-                     <ul class="productos-items">
+                     <ul class="productos-items" data-aos="fade-up">
                          <li><img src="../tienda/chaqueta.png"></li>
                          <li><img src="../tienda/chaqueta1.jpeg"></li>
                          <li><img src="../tienda/chaqueta2.png"></li> 
