se modifico la animacion del footer de todas las paginas del sitio

--- a/pages/tiendaChaquetas.html
+++ b/pages/tiendaChaquetas.html
@@ -137,7 +137,7 @@
                   </div>
       </section>
   </main>
-    <footer>
+    <footer data-aos="fade-up">
         <div class="grid text-center">
             <div class="g-col-4">
                 <h2>Servicios</h2>
