--- a/pages/eventoEstajevi.html
+++ b/pages/eventoEstajevi.html
@@ -79,7 +79,7 @@
         </section>
       </article>
     </main>
-    <footer>
+    <footer data-aos="fade-up">
         <div class="grid text-center">
             <div class="g-col-4">
                 <h2>Servicios</h2>
