--- a/pages/eventoGlobal.html
+++ b/pages/eventoGlobal.html
@@ -76,7 +76,7 @@
         </section>
       </article>
     </main>
-    <footer>
+    <footer data-aos="fade-up">
         <div class="grid text-center">
             <div class="g-col-4">
                 <h2>Servicios</h2>
