se creo las etiquetas de alt a cada imagen de todas las paginas del html y se anidaron las etiquetas en el documento de sass

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./images/logotiponav.PNG" alt="logotipo"></a>
+          <a class="navbar-brand" href="#"><img src="./images/logotiponav.PNG" alt="logotipo matiz"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -60,26 +60,26 @@
     </nav>
 </header>
 <main>
-    <div class="banner" data-aos="flip-left"><a href="./index.html" target="_blank"><img src="./images/matizbanner.png" alt="Matiz banner"></a></div>
+    <div class="banner" data-aos="flip-left"><a href="./index.html" target="_blank"><img src="./images/matizbanner.png" alt="Matiz banner modelos"></a></div>
  <section id="shop" data-aos="fade-up">
         <h1>Tienda</h1>
      <div class="tienda">
          <div class="tienda-productos">
             <ul class="productos">
-                <li><img src="./images/hat.png"></li>
-                <li><a href="./pages/tiendaCamisas.html" target="_blank"><img src="./images/camisa.png"></a></li>
-                <li><a href="./pages/tiendaChaquetas.html" target="_blank"><img src="./images/chaqueta.png"></a></li> 
-                <li><img src="./images/accesorio.png"></li>
-                <li><img src="./images/playera.png"></li>
-                <li><img src="./images/hoodie.png"></li>
-                <li><img src="./images/zapatos.png"></li>
-                <li><img src="./images/short.png"></li>
-                <li><img src="./images/pantalon.png"></li>
+                <li><img src="./images/hat.png" alt="gorra awesome"></li>
+                <li><a href="./pages/tiendaCamisas.html" target="_blank"><img src="./images/camisa.png" alt="camisa floreada"></a></li>
+                <li><a href="./pages/tiendaChaquetas.html" target="_blank"><img src="./images/chaqueta.png" alt="chaqueta invierno"></a></li> 
+                <li><img src="./images/accesorio.png" alt="bolso carhart"></li>
+                <li><img src="./images/playera.png" alt="t shirt awesome"></li>
+                <li><img src="./images/hoodie.png" alt="hoodie rebook"></li>
+                <li><img src="./images/zapatos.png" alt="zapatos adidas"></li>
+                <li><img src="./images/short.png" alt="short baggie"></li>
+                <li><img src="./images/pantalon.png" alt="pantalon negro"></li>
             </ul>
          </div>
          <div class="tienda-fisica">
             <section class="tienda-fisica-card"> 
-                <a href="#contact"><img class="nosotrostienda" src="./images/nosotrostienda.png"></a>
+                <a href="#contact"><img class="nosotrostienda" src="./images/nosotrostienda.png" alt="tienda fisica"></a>
              </section>
          </div>
      </div>
@@ -99,12 +99,12 @@
     <h3>Looks</h3> 
     <div class="looks" data-aos="fade-up">
         <div class="looks-fotos">
-            <a href="#contact"><img src="./images/look1.JPEG"></a>
-            <a href="#contact"> <img src="./images/look2.JPEG"></a>
+            <a href="#contact"><img src="./images/look1.JPEG" alt="look streetwear caballero"></a>
+            <a href="#contact"> <img src="./images/look2.JPEG" alt="look streetwear dama"></a>
         </div> 
         <div class="looks-fotos">
-            <a href="#contact"><img src="images/look3.JPEG"></a>
-            <a href="#contact"><img src="./images/look4.JPEG"></a>
+            <a href="#contact"><img src="images/look3.JPEG" alt="look streetwear caballero"></a>
+            <a href="#contact"><img src="./images/look4.JPEG" alt="look streetwear dama"></a>
         </div>
     </div>
  </section> 
@@ -124,13 +124,13 @@
           </div>
         <div class="row" data-aos="fade-up">
           <div class="col">
-            <div class="col-img"><img class="linkeventos" src="./images/flyer1.JPEG"></div>
+            <div class="col-img"><img class="linkeventos" src="./images/flyer1.JPEG" alt="flyer premios pepsi"></div>
           </div>
           <div class="col">
-            <div class="col-img"><a href="./pages/eventoEstajevi.html" target="_blank"><img class="linkeventos" src="./images/flyer2.JPEG"></a></div>
+            <div class="col-img"><a href="./pages/eventoEstajevi.html" target="_blank"><img class="linkeventos" src="./images/flyer2.JPEG" alt="flyer esta jevi"></a></div>
           </div>
           <div class="col">
-           <div class="col-img"><a href="./pages/eventoGlobal.html" target="_blank"><img class="linkeventos" src="./images/flyer3.PNG"></a></div> 
+           <div class="col-img"><a href="./pages/eventoGlobal.html" target="_blank"><img class="linkeventos" src="./images/flyer3.PNG" alt="flyer logotipo local global"></a></div> 
           </div>
         </div>
       </div>
@@ -138,7 +138,7 @@
 <section id="us" data-aos="fade-up">
    <h2>Nosotros</h2>
    <div class="nosotros" data-aos="fade-up">
-    <img src="./images/nosotrosbanner.png" alt="Nosotros">
+    <img src="./images/nosotrosbanner.png" alt="Nosotros design comunidad matiz">
     <div class="nosotros-texto">
         <p>Somos un colectivo de artistas de varias disciplinas que se inspiran en la busqueda de un mundo propio. Nuestra mision es la exploracion del diseño de modas, la arquitectura, la serigrafia, la fotografia, la pintura, la musica y el cine. Y la utilizacion de estos medios como herramienta para generar un movimiento de representacion del tiempo en el que vivimos y nuestro entorno actual, usando la ropa como principal via de comunicacion material para expandir nuestras visiones y mensajes.</p>
     </div>
@@ -191,7 +191,7 @@
             </ul>
         </div>
         <div class="g-col-4">
-            <a href="index.html" target="_blank"><img src="./images/logotipomatiz.png"></a>
+            <a href="index.html" target="_blank"><img src="./images/logotipomatiz.png" alt="logotipo matiz"></a>
             <p>S.A. 2024.</p>
         </div>
         <div class="g-col-4">
