--- a/pages/eventoEstajevi.html
+++ b/pages/eventoEstajevi.html
@@ -64,16 +64,16 @@
         <section>
         <div class="articulo" data-aos="fade-up">
         <div class="articulo-cajas">
-          <div class="jevi-portada" data-aos="flip-left"><img src="../eventos/estajevi.jpg"></div>
+          <div class="jevi-portada" data-aos="flip-left"><img src="../eventos/estajevi.jpg" alt="logotipo design esta jevi"></div>
           <div><p>Se trata de una noche para ser, para bailar, para encontrarse, para brindar, para disfrutar, para abrazarse con quien comparte la misma emoción de estar en un espacio en el que la libertad y el respeto son la premisa principal. La mayoría usa lentes oscuros, no hay código de vestimenta, si tuviesen que resaltar algo seguramente sería “sé tú mismo y no tengas miedo”. Es por eso que hay tanta piel desnuda, tantos brillos, tanta variedad de colores, nadie critica, nadie juzga.</p></div>
         </div>
         <div class="articulo-cajas">
           <div><p>Está Jevi es un espacio de encuentro multidisciplinario donde cada una de las personas que va puede expresarse desde lo que son. Es un espacio en el que quien vaya puede sentir la libertad de ser lo que quiera, sin pretensiones y sobre todo sin juicios. Y sí, tambien es una noche en la que convergen distintas expresiones musicales, artísticas e identitarias. Pero la música y el alcohol no son suficientes en este encuentro, con esta iniciativa se busca algo mas trascendente. Ese “algo más” fue tomando forma al invitar a artistas emergentes, involucrar a marcas nacionales para exponer y comercializar su trabajo y así dieron con un encuentro en el que no solo había buena música, sino también performance, arte, diseño.</p></div>
-          <div class="jevi-retratos" data-aos="flip-left"><img src="../eventos/estajevi2.jpg"> <img src="../eventos/estajevi3.jpg"></div>
+          <div class="jevi-retratos" data-aos="flip-left"><img src="../eventos/estajevi2.jpg" alt="retrato de alguien con estilo en la fiesta"> <img src="../eventos/estajevi3.jpg" alt="retrato de alguien con estilo en la fiesta"></div>
         </div>
         </div>
         <div class="articulo-cajas-footer">
-          <div class="jevi-tienda" data-aos="flip-left"><img src="../eventos/estajevi8.jpg.webp"></div>
+          <div class="jevi-tienda" data-aos="flip-left"><img src="../eventos/estajevi8.jpg.webp" alt="puesto de bazar en evento esta jevi"></div>
           <div><p>Es bajo este contexto en que se le da voz y espacio a artistas y propuestas emergentes, esto nos motivaba a abarcar desde un lugar bastante ambicioso varios rubros claves para la microeconomía de un país, arte, música y moda. Este colectivo liderado y dirigido por un equipo conformado enteramente por mujeres es el responsable de darle refugio a distintas marcas nacionales, con propuestas alternativas y que apuestan por la busqueda de la identidad tratan de captar la atención de posibles compradores en un mercado donde pocas veces se encuentran reunidas tantas alternativas tan nutridas de originalidad. Dentro de este microcosmos tan inspirador fue que Matiz se asocio para aportar su grano de arena a un conjunto del que nos honra formar parte.</p></div>
         </div>
         </section>
@@ -90,7 +90,7 @@
                 </ul>
             </div>
             <div class="g-col-4">
-                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png"></a>
+                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png" alt="logotipo matiz"></a>
                 <p>S.A. 2024.</p>
             </div>
             <div class="g-col-4">
