--- a/pages/eventoGlobal.html
+++ b/pages/eventoGlobal.html
@@ -65,12 +65,12 @@
         <section>
         <div class="articulo" data-aos="fade-up">
         <div class="articulo-cajas">
-          <div class="jevi-portada" data-aos="flip-left"><img src="../eventos/global2.jpg"></div>
+          <div class="jevi-portada" data-aos="flip-left"><img src="../eventos/global2.jpg" alt="flyer local global"></div>
           <div><p>En el marco de esta gran propuesta es donde una de las principales inspiraciones y origenes del colectivo Matiz cae como anillo al dedo. El universo de la patineta o tambien conocido com el skateboarding, tiene su propio lenguaje y codigos de reconocimiento. Con un lenguaje tan basto es que se ha experimentado durante tanto tiempo a traves de uno de los medios de expresion mas elementales de la vestimenta urbana como lo es el estampado. Pero en el caso especifico de la comunidad patinetera del mundo y de nuestra ciudad, del cual muchos integrantes del colectivo Matiz han formado parte durante sus primeras etapas de formacion. Pero si hay una pieza que resulta protagonista se podria decir que es la franela, polera o camisa con su respectivo print o serigrafia. En esta edicion las diversas visiones de varios artistas con las que pudo compartir el colectivo Matiz, tuvieron la oportunidad de presentar su trabajo con un animo que trasciende lo comercial y lo dignifica como obra o expresion de nuestra epoca, sin perder la oportunidad de jugar con la dualidad que conlleva una simple franela, la expresion y la comodidad.</p></div>
         </div>
         <div class="articulo-cajas">
           <div><p>Se está dando una apertura de manifestación cultural como muestra de la unión de talentos en la ciudad de Caracas. Desde la Academia de Moda de la UCAB, se ha logrado la unión de talentos y creatividad con una vision que combina la practicidad y la comodidad junto con las busquedas particulares de identidad como principales conceptos editoriales. La exposición consiste en mostrar una colección de estampado textil, en la que se cuentan con 29 artistas, es una muestra de la visión gráfica de lo que está sucediendo en diseño gráfico a nivel nacional. Una exposición de franelas, camisetas, playeras, remeras, poleras en forma de una muestra museográfica y textil, donde el publico tendria la oportunidad de adquirir sus piezas de forma exclusiva e impulsar el negocio de los artistas de forma directa e intima. Se cuentan también con actividades como ponencias y conversatorios que expandieran aun mas la vision que pudiese tener el publico sobre los conceptos que llevan los productos, de la mano de sus autores. La idea de que la exposición se realice principalmente a través de camisas es por lo cotidiano que es para las personas utilizar esta prenda de vestir que ha trascendido por más de dos siglos.</p></div>
-          <div class="jevi-retratos" data-aos="flip-left"><img class="global" src="../eventos/global8.jpg"> <img class="global" src="../eventos/global9.jpg"></div>
+          <div class="jevi-retratos" data-aos="flip-left"><img class="global" src="../eventos/global8.jpg" alt="personas disfrutando y compartiendo en la exposicion"> <img class="global" src="../eventos/global9.jpg" alt="personas disfrutando y compartiendo en la exposicion"></div>
         </div>
         </div>
         </section>
@@ -87,7 +87,7 @@
                 </ul>
             </div>
             <div class="g-col-4">
-                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png"></a>
+                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png" alt="logotipo matiz"></a>
                 <p>S.A. 2024.</p>
             </div>
             <div class="g-col-4">
