--- a/pages/tiendaCamisas.html
+++ b/pages/tiendaCamisas.html
@@ -124,15 +124,15 @@
                 <div class="tienda-camisas" data-aos="fade-up">
                     <div class="productos-camisas">
                        <ul class="productos-items" data-aos="fade-up">
-                           <li><img src="../tienda/camisa2.png"></li>
-                           <li><img src="../tienda/camisa3.jpg"></li>
-                           <li><img src="../tienda/camisa4.png"></li> 
-                           <li><img src="../tienda/camisa5.png"></li>
-                           <li><img src="../tienda/camisa6.png"></li>
-                           <li><img src="../tienda/camisa7.jpg"></li>
-                           <li><img src="../tienda/camisa8.JPG"></li>
-                           <li><img src="../tienda/camisa9.jpg"></li>
-                           <li><img src="../tienda/camisa10.jpg"></li>
+                           <li><img src="../tienda/camisa2.png" alt="camisa azul"></li>
+                           <li><img src="../tienda/camisa3.jpg" alt="camisa estampada ruta 66"></li>
+                           <li><img src="../tienda/camisa4.png" alt="camisa rayas vertical"></li> 
+                           <li><img src="../tienda/camisa5.png" alt="camisa franjas vertical"></li>
+                           <li><img src="../tienda/camisa6.png" alt="camisa rayas vertical"></li>
+                           <li><img src="../tienda/camisa7.jpg" alt="camisa estampada design ocaso"></li>
+                           <li><img src="../tienda/camisa8.JPG" alt="camisa estampada design microbios"></li>
+                           <li><img src="../tienda/camisa9.jpg" alt="camisa estampada rayas y microbios"></li>
+                           <li><img src="../tienda/camisa10.jpg" alt="camisa franjas vertical"></li>
                        </ul>
                     </div>
         </section>
@@ -148,7 +148,7 @@
                 </ul>
             </div>
             <div class="g-col-4">
-                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png"></a>
+                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png" alt="logotipo matiz"></a>
                 <p>S.A. 2024.</p>
             </div>
             <div class="g-col-4">
