--- a/pages/tiendaChaquetas.html
+++ b/pages/tiendaChaquetas.html
@@ -124,15 +124,15 @@
               <div class="tienda-camisas" data-aos="fade-up">
                   <div class="productos-camisas">
                      <ul class="productos-items" data-aos="fade-up">
-                         <li><img src="../tienda/chaqueta.png"></li>
-                         <li><img src="../tienda/chaqueta1.jpeg"></li>
-                         <li><img src="../tienda/chaqueta2.png"></li> 
-                         <li><img src="../tienda/chaqueta3.png"></li>
-                         <li><img src="../tienda/chaqueta4.jpeg"></li>
-                         <li><img src="../tienda/chaqueta5.jpeg"></li>
-                         <li><img src="../tienda/chaqueta6.png"></li>
-                         <li><img src="../tienda/chaqueta7.png"></li>
-                         <li><img src="../tienda/chaqueta8.jpg"></li>
+                         <li><img src="../tienda/chaqueta.png" alt="chaqueta invierno azul"></li>
+                         <li><img src="../tienda/chaqueta1.jpeg" alt="chaqueta invierno azul marino"></li>
+                         <li><img src="../tienda/chaqueta2.png" alt="jog cortavientos negro magenta turquesa"></li> 
+                         <li><img src="../tienda/chaqueta3.png" alt="corta vientos"></li>
+                         <li><img src="../tienda/chaqueta4.jpeg" alt="chaqueta invierno azul marino"></li>
+                         <li><img src="../tienda/chaqueta5.jpeg" alt="chaqueta aviador verde"></li>
+                         <li><img src="../tienda/chaqueta6.png" alt="varsity chaqueta blanca"></li>
+                         <li><img src="../tienda/chaqueta7.png" alt="cortavientos jog azul"></li>
+                         <li><img src="../tienda/chaqueta8.jpg" alt="varsity chaqueta negra"></li>
                      </ul>
                   </div>
       </section>
@@ -148,7 +148,7 @@
                 </ul>
             </div>
             <div class="g-col-4">
-                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png"></a>
+                <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png" alt="logotipo matiz"></a>
                 <p>S.A. 2024.</p>
             </div>
             <div class="g-col-4">
