se pusieron imagenes de banner dentro de los html de las paginas de tienda y eventos, se llenaron los documentos sass de los partials y se importaron al documento padre de estilos sass y se modifico el responsive de la pagina de eventos

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                   Tienda
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./pages/tiendaCamisas.html">Camisas</a></li>
-                  <li><a class="dropdown-item" href="./pages/tiendaChaquetas.html">Chaquetas</a></li>
+                  <li><a class="dropdown-item" href="./pages/tiendaCamisas.html" target="_blank">Camisas</a></li>
+                  <li><a class="dropdown-item" href="./pages/tiendaChaquetas.html" target="_blank">Chaquetas</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -41,8 +41,8 @@
                   Eventos 
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./pages/eventoEstajevi.html">Esta Jevi</a></li>
-                  <li><a class="dropdown-item" href="./pages/eventoGlobal.html">Local Global</a></li>
+                  <li><a class="dropdown-item" href="./pages/eventoEstajevi.html" target="_blank">Esta Jevi</a></li>
+                  <li><a class="dropdown-item" href="./pages/eventoGlobal.html" target="_blank">Local Global</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -60,7 +60,11 @@
     </nav>
 </header>
 <main>
-    <div class="banner" data-aos="flip-left"><a href="./index.html" target="_blank"><img src="./images/matizbanner.png" alt="Matiz banner modelos"></a></div>
+    <div class="banner" data-aos="flip-left">
+      <a href="./index.html" target="_blank">
+        <img src="./images/matizbanner.png" alt="Matiz banner modelos">
+      </a>
+    </div>
  <section id="shop" data-aos="fade-up">
         <h1>Tienda</h1>
      <div class="tienda">
