--- a/pages/eventoEstajevi.html
+++ b/pages/eventoEstajevi.html
@@ -59,6 +59,11 @@
     </nav>
 </header>
 <main>
+   <div class="banner" data-aos="flip-left">
+    <a href="../index.html" target="_blank">
+      <img src="../images/nosotrosbanner.png" alt="Matiz banner modelos">
+    </a>
+   </div>
       <article class="eventos" data-aos="fade-up">
         <h1>Eventos</h1>
         <section>
