--- a/pages/tiendaCamisas.html
+++ b/pages/tiendaCamisas.html
@@ -59,83 +59,30 @@
         </div>
     </nav>
 </header>
-<main>    
-    <!--<section class="store">
-        <h2>Tienda</h2> 
-      <section class="catalogo">
-         <div>
-            <div class="producto">
-            <img src="../tienda/camisa2.png">
-            <div> <p>comprar</p> </div>
-            </div>  
-         </div>
-         <div>
-            <div class="producto">
-            <img src="../tienda/camisa3.jpg">
-            <div> <p>comprar</p> </div>
-            </div>  
-         </div>
-         <div>
-            <div class="producto">
-            <img src="../tienda/camisa4.png">
-            <div> <p>comprar</p> </div>
-            </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa5.png">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa6.png">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa7.jpg">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa8.JPG">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa9.jpg">
-           <div> <p>comprar</p> </div>
-           </div>  
+<main>
+  <div class="banner" data-aos="flip-left">
+   <a href="../index.html" target="_blank">
+     <img src="../images/matizbanner.png" alt="Matiz banner modelos">
+   </a>
+  </div> 
+    <section class="camisas" data-aos="fade-up">
+     <h1>Tienda</h1> 
+        <div class="tienda-camisas" data-aos="fade-up">
+          <div class="productos-camisas">
+            <ul class="productos-items" data-aos="fade-up">
+              <li><img src="../tienda/camisa2.png" alt="camisa azul"></li>
+              <li><img src="../tienda/camisa3.jpg" alt="camisa estampada ruta 66"></li>
+              <li><img src="../tienda/camisa4.png" alt="camisa rayas vertical"></li> 
+              <li><img src="../tienda/camisa5.png" alt="camisa franjas vertical"></li>
+              <li><img src="../tienda/camisa6.png" alt="camisa rayas vertical"></li>
+              <li><img src="../tienda/camisa7.jpg" alt="camisa estampada design ocaso"></li>
+              <li><img src="../tienda/camisa8.JPG" alt="camisa estampada design microbios"></li>
+              <li><img src="../tienda/camisa9.jpg" alt="camisa estampada rayas y microbios"></li>
+              <li><img src="../tienda/camisa10.jpg" alt="camisa franjas vertical"></li>
+            </ul>
           </div>
-          <div>
-           <div class="producto">
-           <img src="../tienda/camisa10.jpg">
-           <div> <p>comprar</p> </div>
-           </div>  
-          </div>
-      </section>
-      </section>-->
-        <section class="camisas" data-aos="fade-up">
-                <h1>Tienda</h1> 
-                <div class="tienda-camisas" data-aos="fade-up">
-                    <div class="productos-camisas">
-                       <ul class="productos-items" data-aos="fade-up">
-                           <li><img src="../tienda/camisa2.png" alt="camisa azul"></li>
-                           <li><img src="../tienda/camisa3.jpg" alt="camisa estampada ruta 66"></li>
-                           <li><img src="../tienda/camisa4.png" alt="camisa rayas vertical"></li> 
-                           <li><img src="../tienda/camisa5.png" alt="camisa franjas vertical"></li>
-                           <li><img src="../tienda/camisa6.png" alt="camisa rayas vertical"></li>
-                           <li><img src="../tienda/camisa7.jpg" alt="camisa estampada design ocaso"></li>
-                           <li><img src="../tienda/camisa8.JPG" alt="camisa estampada design microbios"></li>
-                           <li><img src="../tienda/camisa9.jpg" alt="camisa estampada rayas y microbios"></li>
-                           <li><img src="../tienda/camisa10.jpg" alt="camisa franjas vertical"></li>
-                       </ul>
-                    </div>
-        </section>
+        </div>
+   </section>
     </main>
     <footer data-aos="fade-up">
         <div class="grid text-center">
