--- a/pages/tiendaChaquetas.html
+++ b/pages/tiendaChaquetas.html
@@ -60,82 +60,29 @@
     </nav>
 </header>
 <main>
-<!--<section class="store">
-        <h2>Tienda</h2> 
-      <section class="catalogo">
-         <div>
-            <div class="producto">
-            <img src="../tienda/camisa2.png">
-            <div> <p>comprar</p> </div>
-            </div>  
+   <div class="banner" data-aos="flip-left">
+    <a href="../index.html" target="_blank">
+      <img src="../images/matizbanner.png" alt="Matiz banner modelos">
+    </a>
+   </div>
+   <section class="camisas" data-aos="fade-up">
+     <h1>Tienda</h1> 
+       <div class="tienda-camisas" data-aos="fade-up">
+         <div class="productos-camisas">
+             <ul class="productos-items" data-aos="fade-up">
+               <li><img src="../tienda/chaqueta.png" alt="chaqueta invierno azul"></li>
+               <li><img src="../tienda/chaqueta1.jpeg" alt="chaqueta invierno azul marino"></li>
+               <li><img src="../tienda/chaqueta2.png" alt="jog cortavientos negro magenta turquesa"></li> 
+               <li><img src="../tienda/chaqueta3.png" alt="corta vientos"></li>
+               <li><img src="../tienda/chaqueta4.jpeg" alt="chaqueta invierno azul marino"></li>
+               <li><img src="../tienda/chaqueta5.jpeg" alt="chaqueta aviador verde"></li>
+               <li><img src="../tienda/chaqueta6.png" alt="varsity chaqueta blanca"></li>
+               <li><img src="../tienda/chaqueta7.png" alt="cortavientos jog azul"></li>
+               <li><img src="../tienda/chaqueta8.jpg" alt="varsity chaqueta negra"></li>
+             </ul>
          </div>
-         <div>
-            <div class="producto">
-            <img src="../tienda/camisa3.jpg">
-            <div> <p>comprar</p> </div>
-            </div>  
-         </div>
-         <div>
-            <div class="producto">
-            <img src="../tienda/camisa4.png">
-            <div> <p>comprar</p> </div>
-            </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa5.png">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa6.png">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa7.jpg">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa8.JPG">
-           <div> <p>comprar</p> </div>
-           </div>  
-         </div>
-         <div>
-           <div class="producto">
-           <img src="../tienda/camisa9.jpg">
-           <div> <p>comprar</p> </div>
-           </div>  
-          </div>
-          <div>
-           <div class="producto">
-           <img src="../tienda/camisa10.jpg">
-           <div> <p>comprar</p> </div>
-           </div>  
-          </div>
-      </section>
-    </section>-->
-      <section class="camisas" data-aos="fade-up">
-              <h1>Tienda</h1> 
-              <div class="tienda-camisas" data-aos="fade-up">
-                  <div class="productos-camisas">
-                     <ul class="productos-items" data-aos="fade-up">
-                         <li><img src="../tienda/chaqueta.png" alt="chaqueta invierno azul"></li>
-                         <li><img src="../tienda/chaqueta1.jpeg" alt="chaqueta invierno azul marino"></li>
-                         <li><img src="../tienda/chaqueta2.png" alt="jog cortavientos negro magenta turquesa"></li> 
-                         <li><img src="../tienda/chaqueta3.png" alt="corta vientos"></li>
-                         <li><img src="../tienda/chaqueta4.jpeg" alt="chaqueta invierno azul marino"></li>
-                         <li><img src="../tienda/chaqueta5.jpeg" alt="chaqueta aviador verde"></li>
-                         <li><img src="../tienda/chaqueta6.png" alt="varsity chaqueta blanca"></li>
-                         <li><img src="../tienda/chaqueta7.png" alt="cortavientos jog azul"></li>
-                         <li><img src="../tienda/chaqueta8.jpg" alt="varsity chaqueta negra"></li>
-                     </ul>
-                  </div>
-      </section>
+      </div>
+   </section>
   </main>
     <footer data-aos="fade-up">
         <div class="grid text-center">
