se cambio informacion en la zona del footer sobre los objetivos del proyecto a modo de disclamer

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
         <div class="g-col-4">
             <a href="index.html" target="_blank"><img src="./images/logotipomatiz.png" alt="logotipo matiz"></a>
-            <p>S.A. 2024.</p>
+            <p>Matiz es un proyecto sin intenciones de lucro hecho con fines practicos y de aprendizaje exclusivamente. 2024.</p>
         </div>
         <div class="g-col-4">
             <h2>Contacto</h2>
