--- a/pages/tiendaCamisas.html
+++ b/pages/tiendaCamisas.html
@@ -65,7 +65,7 @@
      <img src="../images/matizbanner.png" alt="Matiz banner modelos">
    </a>
   </div> 
-    <section class="camisas" data-aos="fade-up">
+   <section class="camisas" data-aos="fade-up">
      <h1>Tienda</h1> 
         <div class="tienda-camisas" data-aos="fade-up">
           <div class="productos-camisas">
@@ -96,7 +96,7 @@
             </div>
             <div class="g-col-4">
                 <a href="../index.html" target="_blank"><img src="../images/logotipomatiz.png" alt="logotipo matiz"></a>
-                <p>S.A. 2024.</p>
+                <p>Matiz es un proyecto sin intenciones de lucro hecho con fines practicos y de aprendizaje exclusivamente. 2024.</p>
             </div>
             <div class="g-col-4">
                 <h2>Contacto</h2>
