se arreglaron las rutas hacia el landing del nav bar de cuatro paginas

--- a/pages/eventoEstajevi.html
+++ b/pages/eventoEstajevi.html
@@ -33,7 +33,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#styling">Styling</a>
+                <a class="nav-link active" aria-current="page" href="../index.html#styling">Styling</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#events" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -45,10 +45,10 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../index.html/#us">Nosotros</a>
+                <a class="nav-link" href="../index.html#us">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../index.html/#contact">Contacto</a>
+                <a class="nav-link" href="../index.html#contact">Contacto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
